<resources>
    <string name="app_name">Calorie Tracker</string>
    <string name="settings">Setting</string>
    <string name="daily">Daily</string>
    <string name="calender">Calendar</string>
    <string name="home">Home</string>
    <string name="Carbs">Enter Carbohydrates(g)</string>
    <string name="Dinner">Dinner</string>
    <string name="BreakFast">Breakfast</string>
    <string name="Lunch">Lunch</string>
    <string name="Snack">Snack</string>
    <string name="MOTD">Meals of the Day</string>
    <string name="CAM">Calories and Macros</string>
    <string name="Cals">Enter Total Calories</string>
    <string name="Protien">Enter Proteins (g)</string>
    <string name="Fats">Enter Fats (g)</string>
    <string name="Fin">Finish</string>
    <string name="EN">Enter Name:</string>
    <string name="N">Name</string>
    <string name="Sub">Submit</string>
    <string name="EA">Enter Age:</string>
    <string name="age">Age</string>
    <string name="Eh">Enter Height:</string>
    <string name="EW">Enter Weight:</string>
    <string name="He">Height</string>
    <string name="We">Weight in lbs</string>
    <string name="Exe">Exercise</string>
    <string name="ENs">Enter Name in Settings:</string>
    <string name="Fat">Fats</string>
    <string name="Protiens">Protein</string>
    <string name="Carb">Carbs</string>
    <string name="Calorie">Calories</string>
    <string name="BMI">BMI</string>
    <string name="feet">Feet</string>
    <string name="Inch">Inches</string>
    <string name="exer">Enter Exercise Performed:</string>
    <string name="prof">Profile</string>
    <string name="edit_p">Edit Profile</string>
    <string name="Name">Name:</string>
    <string name="A">Age:</string>
    <string name="Height">Height:</string>
    <string name="Weight">Weight:</string>
    <string name="ft">ft</string>
    <string name="in">in</string>
</resources>