<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inputdata_g_b"
    tools:context=".Profile">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="38dp"
        android:text="@string/Name"
        android:textColor="#30cfd0"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dis_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="38dp"
        android:text="@string/N"
        android:textColor="#30cfd0"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/A"
        android:textColor="#30cfd0"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/dis_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/age"
        android:textColor="#30cfd0"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/age"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/Height"
        android:textColor="#30cfd0"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@+id/age"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <TextView
        android:id="@+id/feet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/ft"
        android:textColor="#30cfd0"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/height"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <TextView
        android:id="@+id/inches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/in"
        android:textColor="#30cfd0"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/feet"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/Weight"
        android:textColor="#30cfd0"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@+id/height"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <TextView
        android:id="@+id/dis_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/We"
        android:textColor="#30cfd0"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/weight"
        app:layout_constraintTop_toBottomOf="@id/height" />

    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/edit_p"
        android:textColor="#30cfd0"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/weight" />

</androidx.constraintlayout.widget.ConstraintLayout>